System/log_output.txt
  File "<string>", line 1
    "with
    ^
SyntaxError: unterminated string literal (detected at line 1)
